8139595: MethodHandles::remove_dependent_nmethod is not MT safe

Reviewed-by: jrose, coleenp