hotspot/src/share/vm/compiler/compileBroker.cpp
@@ -26,6 +26,7 @@
 #include "classfile/systemDictionary.hpp"
 #include "classfile/vmSymbols.hpp"
 #include "code/codeCache.hpp"
+#include "code/dependencyContext.hpp"
 #include "compiler/compileBroker.hpp"
 #include "compiler/compileLog.hpp"
 #include "compiler/compilerOracle.hpp"
@@ -546,7 +547,6 @@ void CompileBroker::compilation_init() {
                  PerfDataManager::create_counter(JAVA_CI, "totalTime",
                                                  PerfData::U_Ticks, CHECK);
   }
-
 
   if (UsePerfData) {
 
